# bouncehammer

./: .gitignore  INSTALL  Implement.PL  KNOWNBUGS  LICENSE  Makefile.am  Makefile.in  Modules.PL  README  RELEASE_NOTES  RELEASE_NOTES.JA  SUPPORT  UPGRADE  configure  configure.ac
examples/: hammer.1970-01-01.ffffffff.000000.tmp
src/: Makefile.in
src/cgi/: Makefile.in  api.PL  bouncehammer.PL
src/etc/: Makefile.in  available-countries-example
src/lib/: Kanadzuchi.pm  Makefile.in
src/lib/Kanadzuchi/: Address.pm  Archive.pm  BdDR.pm  Crypt.pm  Exceptions.pm  ISO3166.pm  Iterator.pm  Log.pm  MDA.pm  MIME.pm  MTA.pm  Mail.pm  Makefile.am  Makefile.in  Mbox.pm  Metadata.pm  RFC2606.pm  RFC2822.pm  RFC3463.pm  Statistics.pm  String.pm  Time.pm
src/lib/Kanadzuchi/API/: HTTP.pm  Makefile.in
src/lib/Kanadzuchi/Archive/: Bzip2.pm  Gzip.pm  Makefile.in  Zip.pm
src/lib/Kanadzuchi/BdDR/: BounceLogs.pm  Cache.pm  DailyUpdates.pm  Makefile.in  Page.pm
src/lib/Kanadzuchi/Config/: Makefile.in  TestRun.pm
src/lib/Kanadzuchi/MIME/: Makefile.in  Parser.pm
src/lib/Kanadzuchi/MTA/: Courier.pm  Exim.pm  Fallback.pm  FeedbackLoop.pm  MODULES  Makefile.in  OpenSMTPD.pm  Postfix.pm  Sendmail.pm  qmail.pm
src/lib/Kanadzuchi/MTA/US/: Facebook.pm  Google.pm  Makefile.am  Makefile.in  Verizon.pm
src/lib/Kanadzuchi/Mail/: Bounced.pm  Group.pm  Why.pm  (+2 more)
src/lib/Kanadzuchi/Mail/Bounced/: Makefile.am  Makefile.in
src/lib/Kanadzuchi/Mail/Group/CN/: Cellphone.pm  Makefile.am  Makefile.in  Smartphone.pm  WebMail.pm
src/lib/Kanadzuchi/Mail/Group/NO/: Cellphone.pm  Makefile.am  Makefile.in  Smartphone.pm  WebMail.pm
src/lib/Kanadzuchi/Mail/Group/PA/: Cellphone.pm  Makefile.am  Makefile.in  Smartphone.pm
src/libexec/: Makefile.in
src/sql/: Makefile.in
t/: 000_compile-core.t  001_compile-api.t  002_compile-ui-web.t  010_kanadzuchi.t  011_rfc2822.t  012_time.t  013_exceptions.t  014_string.t  015_metadata.t  016_address.t  017_rfc2606.t  019_iso3166.t  020_statistics.t  021_iterator.t  022_mime-parser.t  023_statistics-stored.t  024_statistics-stored-bddr.t  025_statistics-stored-yaml.t  026_rfc3463.t  027_mime.t  029_mda.t  030_mta.t  031_mta-sendmail.t  032_mta-postfix.t  033_mta-qmail.t  034_mta-us-google.t  035_mta-jp-aubykddi.t  036_mta-exim.t  037_mta-fallback.t  038_mta-courier.t  039_mta-us-facebook.t  040_mta-jp-biglobe.t  041_mta-feedbackloop.t  042_mta-opensmtpd.t  043_mta-us-verizon.t  049_mbox.t  050_mail.t  052_mail-bounced.t  054_mail-why.t  055_mail-group.t  (+28 more)
t/lib/Kanadzuchi/: Test.pm
template/: Makefile.in
template/l10n/: Makefile.in
template/l10n/en/: Makefile.in  terms.tt
template/l10n/ja/: Makefile.in  terms.tt
template/standard/: Makefile.in
template/standard/element/: Makefile.in  div-result.html
template/standard/javascript/: Makefile.in
template/standard/page/: Makefile.in
template/standard/stylesheet/: Makefile.in
(+301 files in other folders)
